src/components/core/Textfield/index.module.css
.textfieldContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.textfield {
    width: 100%;
    height: 2rem;
    padding: 1rem;
    border: none;
    border-radius: 10px;
    background-color: var(--grey-200);
    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
    font-family: inherit;
    font-size: 1rem;
    transition: 0.4s;
}

.textfield:focus-visible {
    outline: none;
}

.textfield:focus,
.textfield:hover {
    background-color: var(--grey-300);
}

.error {
    height: 1.5rem;
    color: var(--dark-red);
    font-size: 0.8rem;
}

